examples/test/testpolicy11918.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11918
  namespace: namespace161
spec:
  podSelector:
    matchLabels:
      key44: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value31
          key12: value7
          key16: value11
      podSelector:
        matchLabels:
          key20: value29
